tests/misc_errors/inline_shell.out
error: inline_shell.li 3,10: variable `n` is not defined
    3 |     echo %n
      |          ^^
