tests/misc_errors/inline_shell.li
fn undefined_variable() {
  inline {
    echo %n
  }
}
